force-app/main/default/objects/Onboarding_Request__c/Onboarding_Request__c.object-meta.xml
<CustomObject>
    <description>Tracks onboarding requests for new hires, including tasks, status, and completion progress.</description>
    <label>Onboarding Request</label>
    <nameField>
        <displayFormat>OBR-{0000}</displayFormat>
        <label>Onboarding Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>