force-app/main/default/objects/Onboarding_Request__c/fields/Assigned_HR__c.field-meta.xml
<CustomField>
    <fullName>Assigned_HR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned HR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Onboarding_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>