force-app/main/default/objects/Onboarding_Request__c/fields/Buddy__c.field-meta.xml
<CustomField>
    <fullName>Buddy__c</fullName>
    <label>Onboarding Buddy</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Onboarding Requests (Buddy)</relationshipLabel>
    <relationshipName>Buddy_Onboarding_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>