force-app/main/default/objects/Onboarding_Request__c/fields/Completion_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Completion_Percentage__c</fullName>
    <label>Completion Percentage</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>