force-app/main/default/objects/Onboarding_Request__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <label>Years of Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-1 Years</fullName>
            </value>
            <value>
                <fullName>1-3 Years</fullName>
            </value>
            <value>
                <fullName>3-5 Years</fullName>
            </value>
            <value>
                <fullName>5-10 Years</fullName>
            </value>
            <value>
                <fullName>10+ Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>