force-app/main/default/objects/Onboarding_Request__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Personal Phone</label>
    <type>Phone</type>
</CustomField>