force-app/main/default/objects/Onboarding_Request__c/fields/Reporting_Manager__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager__c</fullName>
    <label>Reporting Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Onboarding Requests (Reporting Manager)</relationshipLabel>
    <relationshipName>Reporting_Manager_Onboarding_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>