force-app/main/default/objects/Onboarding_Request__c/validationRules/Cannot_Cancel_Completed_Request.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Cancel_Completed_Request</fullName>
    <active>true</active>
    <description>Prevents users from cancelling an Onboarding Request that has already been marked as Completed.</description>
    <errorConditionFormula>AND(
    ISCHANGED(Status__c),
    ISPICKVAL(Status__c, &quot;Cancelled&quot;),
    ISPICKVAL(PRIORVALUE(Status__c), &quot;Completed&quot;)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>A Completed onboarding request cannot be cancelled.</errorMessage>
</ValidationRule>