force-app/main/default/objects/Onboarding_Request__c/listViews/HR_Approvals_Onboarding_Request.listView-meta.xml
<ListView>
    <fullName>HR_Approvals_Onboarding_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>HR Approvals</label>
    <queue>HR_Approvals</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>